<resources>
    <string name="app_name">PoliAsistencia</string>
    <string name="tituloLogin">PoliAsistencia</string>
    <string name="contrasena">Contraseña</string>
    <string name="title_activity_inicio_alumno">InicioAlumno</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_prueba">prueba</string>
    <string name="navegacion_inicio">Inicio</string>
    <string name="navegacion_horario">Horario</string>
    <string name="navegacion_estadisticas">Estadísticas</string>
    <string name="navegacion_notificaciones">Notificaciones</string>
    <string name="navegacion_buscar_alumno">Buscar Alumno</string>
    <string name="navegacion_grupo">Grupos</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="configuracion">Configuración</string>
    <string name="cerrar_sesion">Cerrar Sesión</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_configuracion">Configuracion</string>
    <string name="lunes">Lunes</string>
    <string name="martes">Martes</string>
    <string name="miercoles">Miércoles</string>
    <string name="jueves">Jueves</string>
    <string name="viernes">Viernes</string>
    <string name="hora">Hora</string>
    <string name="_7_00">7:00</string>
    <string name="_8_00">8:00</string>
    <string name="_9_00">9:00</string>
    <string name="_10_00">10:00</string>
    <string name="_11_00">11:00</string>
    <string name="_12_00">12:00</string>
    <string name="_15_00">15:00</string>
    <string name="_14_00">14:00</string>
    <string name="_16_00">16:00</string>
    <string name="_17_00">17:00</string>
    <string name="_18_00">18:00</string>
    <string name="_19_00">19:00</string>
    <string name="_20_00">20:00</string>
    <string name="_21_00">21:00</string>
    <string name="_13_00">13:00</string>
    <string name="usuario">Usuario</string>
    <string name="poli">Poli</string>
    <string name="asistencia">Asistencia</string>
    <string name="ingresar">Ingresar</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="contrasena_actual">Contraseña actual</string>
    <string name="cambiar_contrasena">Cambiar Contraseña</string>
    <string name="vuelve_a_escribir_tu_nueva_contrasena">Vuelve a escribir tu nueva Contraseña</string>
    <string name="actualizar">Actualizar</string>
    <string name="correo_electonico">Correo Electónico</string>
    <string name="shortcut">shortcut</string>

</resources>
