<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_inicio"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/navegacion_inicio" />

    <item
        android:id="@+id/navigation_horario"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/navegacion_horario" />

    <item
        android:id="@+id/navigation_estadisticas"
        android:icon="@drawable/ic_insert_chart_black_24dp"
        android:title="@string/navegacion_estadisticas" />

    <item
        android:id="@+id/navigation_notificaciones"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/navegacion_notificaciones" />

</menu>