<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="edu.cecyt9.ipn.poliasistenciaandroid.CambiarContrasena">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_cambiar_contrasena"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInputLayout_contrasena_actual"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout">

        <EditText
            android:id="@+id/txt_contrasena_actual"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/contrasena_actual"
            android:inputType="textPassword"
            android:singleLine="true"
            android:theme="@style/azul" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInputLayout_contrasena_nueva"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayout_contrasena_actual">

        <EditText
            android:id="@+id/txt_contrasena_nueva"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nueva_contrasena"
            android:inputType="textPassword"
            android:singleLine="true"
            android:theme="@style/azul" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/txtInputLayout_contrasena_nueva_validar"
        android:layout_width="318dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayout_contrasena_nueva">

        <EditText
            android:id="@+id/txt_contrasena_nueva_validar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/vuelve_a_escribir_tu_nueva_contrasena"
            android:inputType="textPassword"
            android:singleLine="true"
            android:theme="@style/azul" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/buton_cambiar_contrasena"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:onClick="cambiarPsw"
        android:text="@string/cambiar_contrasena"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayout_contrasena_nueva_validar" />

</android.support.constraint.ConstraintLayout>
